# My_Game

./: .gitignore  Cargo.toml  rustfmt.toml
assets/: iso_map.tmx
data/creatures/: creatures.ron  creatures.ron.bak
data/items/: items.ron
data/tiles/: tiles.ron
doc/gdd/: book.toml
doc/gdd/src/: README.md  SUMMARY.md  art_style.md  concept.md  localization.md  losing.md  marketing_and_founding.md  music_and_sound.md  story.md  technical_description.md
doc/gdd/src/game_mechanics/: README.md  building.md  enemies.md  event_system.md  (+3 more)
my_plugin/: Cargo.toml
my_plugin/src/: lib.rs
my_plugin/src/components/: coordinates.rs  dirt.rs  grass.rs  mod.rs  stone.rs
my_plugin/src/resources/: board.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
my_plugin/src/systems/: change.rs  input.rs  mod.rs
src/: ai.rs  camera.rs  components.rs  effects.rs  game.rs  helpers.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  menus.rs  raws.rs  resources.rs  spawner.rs  splash.rs  systems.rs  world_creation.rs
src/ai/: domain.rs  tasks.rs  world_state.rs
src/effects/: combat.rs  damage.rs  healthy.rs  inventory.rs  movement.rs
src/game/: camera.rs  map.rs  mod.rs
src/game/map/: mod.rs
src/game/tilemap/: helpers.rs  mod.rs
src/helpers/: camera.rs  controls.rs  state.rs
src/map/: algorithms.rs  chunks.rs  direction.rs  generation.rs  layers.rs  layout.rs  matrix.rs  mod.rs  pathfinding.rs  position.rs  settings.rs  tiletype.rs
src/map/algorithms/: fov.rs  pathfinding.rs
src/map/direction/: edge_direction.rs  impls.rs  tests.rs  vertex_direction.rs  way.rs
src/map/position/: algorithms.rs  convert.rs  direction.rs  impls.rs  iter.rs  rings.rs  tests.rs  utils.rs
src/menu/: audio.rs  audio_menu.rs  main.rs  main_menu.rs  mod.rs  settings.rs  settings_menu.rs  video_menu.rs
src/menus/: audio_menu.rs  main_menu.rs  settings_menu.rs  video_menu.rs
src/raws/: creature_bundle.rs  item_bundle.rs  rawmaster.rs  tile_bundle.rs
src/resources/: map.rs  states.rs  world_map.rs
src/splash/: mod.rs
src/systems/: ai_system.rs  chasing_system.rs  dead_system.rs  field_of_view_system.rs  highlight_system.rs  movement_system.rs  position_check_system.rs  reaction_system.rs  visibility_system.rs
src/world_creation/: generation.rs  settings.rs
test/: how_to_test_systems.rs
(+19 files in other folders)
