[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO serde
#bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
#bevy-inspector-egui = "0.27.0"
glam = "0.27.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable hight optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
