[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
bevy = { features = ["bevy_dev_tools", "trace"], path = "../bevy_testing/bevy" }
#bevy-inspector-egui = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable hight optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is for flamegraph to show debug simbols on release
[profile.release]
debug = true
