[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { features = ["bevy_dev_tools"], path = "../bevy_testing/bevy" }
bevy = { features = ["bevy_dev_tools"], version = "0.15.1" }
bevy-inspector-egui = "0.29.1"

serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
noise = { path = "../bevy_testing/noise-rs", features = ["images"] }
rand = "0.9"

# A lot of errors don't have the patience
#[dev-dependencies.bevy]
##version = 0.15
#path = "../bevy_testing/bevy"
#default-features = false
#features = [
#    "bevy_asset",
#    "bevy_color",
#    "bevy_core_pipeline",
#    "bevy_render",
#    "bevy_sprite",
#    "bevy_state",
#    "bevy_ui",
#    "bevy_window",
#    "bevy_winit",
#    "multi_threaded",
#    "png",
#    "sysinfo_plugin",
#    "wayland",
#    "x11",
#    "bevy_sprite_picking_backend",
#    "bevy_dev_tools",
#    "trace",
#]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable hight optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
